--- a/lib/live_betting_web/components/layouts/app.html.heex
+++ b/lib/live_betting_web/components/layouts/app.html.heex
@@ -1,32 +1,89 @@
 <header class="px-4 sm:px-6 lg:px-8">
-  <div class="flex items-center justify-between border-b border-zinc-100 py-3 text-sm">
+  <div class="flex items-center justify-between py-3 text-sm">
     <div class="flex items-center gap-4">
       <a href="/">
-        <img src={~p"/images/logo.svg"} width="36" />
+        <p class="bg-brand/10 text-brand rounded-full px-2 font-bold leading-6">
+            E-Sports
+        </p>
       </a>
-      <p class="bg-brand/5 text-brand rounded-full px-2 font-medium leading-6">
-        v<%= Application.spec(:phoenix, :vsn) %>
-      </p>
     </div>
-    <div class="flex items-center gap-4 font-semibold leading-6 text-zinc-900">
-      <a href="https://twitter.com/elixirphoenix" class="hover:text-zinc-700">
-        @elixirphoenix
-      </a>
-      <a href="https://github.com/phoenixframework/phoenix" class="hover:text-zinc-700">
-        GitHub
-      </a>
+    <div class="ml-auto hidden lg:flex lg:items-center gap-6 font-semibold leading-6 text-xs text-white">
+      <a href="/" class="hover:text-brand/90">Home</a>
+      <a href="/templates" class="hover:text-brand/90">My Account</a>
+    </div>
+    <button
+      type="button"
+      class="-my-1 -mr-1 ml-6 flex h-8 w-8 items-center justify-center lg:hidden"
+    >
+      <span class="sr-only">Open navigation</span><svg
+        viewBox="0 0 24 24"
+        class="h-6 w-6 stroke-slate-900"
+      ><path
+        d="M3.75 12h16.5M3.75 6.75h16.5M3.75 17.25h16.5"
+        fill="none"
+        stroke-width="1.5"
+        stroke-linecap="round"
+      ></path></svg>
+    </button>
+    <div class="lg:border-slate-900/15 hidden lg:ml-8 lg:flex lg:items-center lg:border-l lg:pl-8">
       <a
-        href="https://hexdocs.pm/phoenix/overview.html"
-        class="rounded-lg bg-zinc-100 px-2 py-1 hover:bg-zinc-200/80"
+        class="-my-2.5 inline-flex justify-center rounded-lg bg-brand px-3 py-2 text-sm font-semibold text-white hover:bg-brand/50"
+        href="/all-access"
       >
-        Get Started <span aria-hidden="true">&rarr;</span>
+        <span class="text-xs">Deposit <span aria-hidden="true">→</span></span>
+      </a>
+      <a href="#" class="ml-8 flex items-center text-white">
+        <span class="flex flex-col items-end">
+          <span class="font-light text-xs">USERNAME</span>
+          <span class="font-semibold text-xs">1,000,000,000 KSH</span>
+        </span>
+        <span class="ml-3">
+          <svg
+            class="w-6 h-6"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="1.5"
+            viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg"
+            aria-hidden="true"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z"
+            >
+            </path>
+          </svg>
+        </span>
+      </a>
+      <a href="#" class="ml-8">
+        <svg
+          class="text-white h-6 w-6"
+          fill="none"
+          stroke="currentColor"
+          stroke-width="1.5"
+          viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg"
+          aria-hidden="true"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M9.594 3.94c.09-.542.56-.94 1.11-.94h2.593c.55 0 1.02.398 1.11.94l.213 1.281c.063.374.313.686.645.87.074.04.147.083.22.127.324.196.72.257 1.075.124l1.217-.456a1.125 1.125 0 011.37.49l1.296 2.247a1.125 1.125 0 01-.26 1.431l-1.003.827c-.293.24-.438.613-.431.992a6.759 6.759 0 010 .255c-.007.378.138.75.43.99l1.005.828c.424.35.534.954.26 1.43l-1.298 2.247a1.125 1.125 0 01-1.369.491l-1.217-.456c-.355-.133-.75-.072-1.076.124a6.57 6.57 0 01-.22.128c-.331.183-.581.495-.644.869l-.213 1.28c-.09.543-.56.941-1.11.941h-2.594c-.55 0-1.02-.398-1.11-.94l-.213-1.281c-.062-.374-.312-.686-.644-.87a6.52 6.52 0 01-.22-.127c-.325-.196-.72-.257-1.076-.124l-1.217.456a1.125 1.125 0 01-1.369-.49l-1.297-2.247a1.125 1.125 0 01.26-1.431l1.004-.827c.292-.24.437-.613.43-.992a6.932 6.932 0 010-.255c.007-.378-.138-.75-.43-.99l-1.004-.828a1.125 1.125 0 01-.26-1.43l1.297-2.247a1.125 1.125 0 011.37-.491l1.216.456c.356.133.751.072 1.076-.124.072-.044.146-.087.22-.128.332-.183.582-.495.644-.869l.214-1.281z"
+          >
+          </path>
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"
+          >
+          </path>
+        </svg>
       </a>
     </div>
   </div>
 </header>
-<main class="px-4 py-20 sm:px-6 lg:px-8">
-  <div class="mx-auto max-w-2xl">
-    <.flash_group flash={@flash} />
-    <%= @inner_content %>
-  </div>
+<main class="relative overflow-hidden pt-12">
+  <.flash_group flash={@flash} />
+  <%= @inner_content %>
 </main>
