--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,11 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+
+#sports_component {
+    /* width */
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
+}
